# OceanSimulation

include/: buffer.h  camera.h  drawable.h  mvp_program.h  ocean.h  ocean_program.h  ortho_camera.h  perspective_camera.h  program.h  texture.h
src/: CMakeLists.txt  buffer.cpp  drawable.cpp  gizmo.cpp  main.cpp  mvp_program.cpp  normal.tga  ocean.cpp  ocean.tga  ocean_program.cpp  ortho_camera.cpp  perspective_camera.cpp  program.cpp  texture.cpp
src/shaders/: CMakeLists.txt  mvp_vertex.glsl  ocean_vertex.glsl  texture_fragment.glsl
